Fixed heading spacing

--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -21,6 +21,15 @@ body {
   scroll-behavior: smooth;
 }
 
+h1,
+h2,
+h3,
+h4,
+h5 {
+  padding: 0;
+  margin: 0;
+}
+
 .header {
   backdrop-filter: blur(80px);
   background: rgba(0, 0, 0, .5);
@@ -69,6 +78,7 @@ body {
     font-weight: 600;
     text-transform: uppercase;
     margin: 0;
+    padding: 0;
     font-family: "Poppins", sans-serif;
     background: transparent;
     border: none;
@@ -83,6 +93,8 @@ body {
   }
 
   @media screen and (max-width: 768px) {
+    padding-left: 1rem;
+    padding-right: 1rem;
     &__nav {
       >ul {
         gap: 1rem;
